Fix color of "Stay logged in" checkbox when navbar is collapsed

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -10,3 +10,10 @@
 	max-width: 600px;
 	margin: 5px auto;
 }
+
+@media ( max-width : 767px) {
+	/* fix color for login dropdown when navbar is collapsed */
+	.navbar-nav .dropdown-menu label {
+		color: #ffffff;
+	}
+}
